chg content class fr div to section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -25,8 +26,9 @@
         </div>
     </header>
 
+    <!-- main content -->
     <div class="hero"></div>
-    <div class="content">
+    <section class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="photo of computer and notebook with SEO components sketch" />
             <h2>Search Engine Optimization</h2>
@@ -48,8 +50,9 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
-    <!-- Benefits section -->
+    </section>
+
+    <!-- sidebar Benefits section -->
     <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -74,6 +77,7 @@
         </div>
     </section>
 
+    <!-- Footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
